apps/memos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels: {}
  strategy:
    type: Recreate
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:0.8.3
          ports:
            - name: http
              containerPort: 5230
          resources: {}
          volumeMounts:
            - mountPath: /var/opt/memos
              name: data
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
