apps/memos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  ports:
    - name: http
      port: 5230
      targetPort: http
  type: ClusterIP
