apps/memos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  namespace: memos
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-allow-lan-only@kubernetescrd
    cf.containeroo.ch/ignore: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: memos.local.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos
                port:
                  name: http
